# tauri-doraemon-pocket

./: .eslintrc  .gitignore  .prettierignore  .prettierrc  cSpell.json  package.json  prettier.config.js  tailwind.config.js  vite.config.ts
scripts/: gen_api.js  manifest.json
src/: App.tsx  index.css  main.tsx  prefilght.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/lib/: conf.rs  log.rs  menu.rs  mod.rs  path.rs  setup.rs  utils.rs
src-tauri/src/lib/api_generator/: generator.rs
src-tauri/src/lib/plugin/: log.rs  mod.rs  script.rs
src-tauri/src/tauri_commands/: api.rs  conf.rs  mod.rs
src/api/: Github.ts  Gitlab.ts
src/common/: constant.ts  data.ts  emitterKey.ts  enum.ts
src/components/BackButton/: index.tsx
src/components/BranchSelect/: index.tsx  index.type.ts
src/components/FilePath/: FilePath.tsx  index.tsx
src/components/HeaderProgress/: HeaderProgress.tsx  docs.md  index.ts
src/components/PageHeader/: PageHeader.tsx  index.tsx
src/components/ThemeBase/: Icon.tsx  Options.tsx  Paper.tsx  docs.md  index.ts
src/customHooks/useFontFamily/: index.ts
src/customHooks/useLanguage/: index.ts
src/customHooks/useTheme/: index.ts
src/customHooks/useUserConfig/: index.ts
src/hooks/useCommonSelectData/: index.ts
src/hooks/useDebounce/: index.ts
src/locale/: index.ts
src/router/: Router.tsx  index.tsx  router.config.tsx
src/store/: index.ts
src/testUtils/: customRender.tsx  mockRedux.tsx
src/typing/: common.type.ts  invoke.type.ts
src/utils/: LocalStorageWrapper.ts  eventEmitter.ts  path.ts
(+99 files in other folders)
